feat: 관심사, 북마크 구현

--- a/zum-assignment/index.html
+++ b/zum-assignment/index.html
@@ -95,7 +95,7 @@
                 </ul>
               </nav>
             </aside>
-            <section class="collect_container">
+            <section class="collect_container selected">
               <div class="title_wrap">
                 <h2>관심사 선택</h2>
 
@@ -210,32 +210,13 @@
                 </ul>
               </div>
             </section>
-            <section class="collect_container">
+            <section class="collect_container" hidden>
               <h2>저장한 콘텐츠</h2>
               <div class="item_list">
                 <ul>
                   <li>
-                    <div class="single_item">
-                      <div>
-                        <a href="#">
-                          <div class="thumb">
-                            <img src="#" />
-                          </div>
-                          <ul class="info">
-                            <li>TV</li>
-                            <li>출처</li>
-                          </ul>
-                          <div class="title">제목</div>
-                        </a>
-                      </div>
 
-                      <div class="item_btns item_bottom">
-                        <div>
-                          <button type="button" class="btn_bookmark clicked"></button>
-                          <button type="button" class="btn_bookmark"></button>
-                        </div>
-                      </div>
-                    </div>
+                    
                   </li>
                 </ul>
               </div>
